--- a/.travis.yml
+++ b/.travis.yml
@@ -4,26 +4,12 @@ compiler: gcc
 matrix:
   include:
   #Ubuntu Xenial (Debug only)
-  - name: Ubuntu Xenial (Debug)
-    if: tag IS NOT present
+  - name: clang-format Check
+    if: type = pull_request
     os: linux
     dist: xenial
     group: stable
-    cache: ccache
-    addons:
-      apt:
-        packages:
-        - libprotobuf-dev
-        - protobuf-compiler
-        - qt5-default
-        - qttools5-dev
-        - qttools5-dev-tools
-        - qtmultimedia5-dev
-        - libqt5multimedia5-plugins
-        - libqt5svg5-dev
-        - libqt5sql5-mysql
-        - libqt5websockets5-dev
-    script: bash ./.ci/travis-compile.sh --format --server --test --debug
+    script: bash ./.ci/travis-compile.sh --format
 
   #Ubuntu Bionic (on docker)
   - name: Ubuntu Bionic (Debug)
