--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ matrix:
     script: docker run --mount "type=bind,source=$(pwd),target=/src" -w="/src"
           --mount "type=bind,source=$HOME/$NAME/.ccache,target=/.ccache" -e "CCACHE_DIR=/.ccache"
           "cockatrice_${NAME,,}"
-          bash .ci/travis-compile.sh --server --debug
+          bash .ci/travis-compile.sh --server --debug --test
 
   - name: Ubuntu Bionic (Release)
     if: (branch = master AND NOT type = pull_request) OR tag IS present
@@ -50,7 +50,7 @@ matrix:
     script: docker run --mount "type=bind,source=$(pwd),target=/src" -w="/src"
           --mount "type=bind,source=$HOME/$NAME/.ccache,target=/.ccache" -e "CCACHE_DIR=/.ccache"
           "cockatrice_${NAME,,}"
-          bash .ci/travis-compile.sh --server --debug
+          bash .ci/travis-compile.sh --server --debug --test
 
   - name: Fedora 29 (Release)
     if: (branch = master AND NOT type = pull_request) OR tag IS present
@@ -76,7 +76,7 @@ matrix:
       - brew install ccache
       - brew install protobuf
       - brew install qt
-    script: bash ./.ci/travis-compile.sh --server --install --debug
+    script: bash ./.ci/travis-compile.sh --server --install --debug --test
 
   - name: macOS (Release)
     if: (branch = master AND NOT type = pull_request) OR tag IS present
